Tried to initiate python function from client-side

--- a/client-inator/src/css/style.css
+++ b/client-inator/src/css/style.css
@@ -1530,3 +1530,24 @@ input[type="radio"] {
 .centered-datepicker {
    text-align: center;
 }
+
+.highlight-table {
+   width: 100%;
+   border-collapse: collapse;
+}
+
+.highlight-table th,
+.highlight-table td {
+   border: 1px solid #dddddd;
+   padding: 8px;
+}
+
+.highlight-table th {
+   background-color: #f2f2f2;
+   text-align: left;
+}
+
+.table-row:hover {
+   background-color: #d11111;
+   cursor: pointer;
+}
