--- a/client-inator/src/css/style.css
+++ b/client-inator/src/css/style.css
@@ -22,10 +22,7 @@
    align-items: center;
    padding: 0;
    height: 100vh;
-   background: linear-gradient(to bottom,
-         rgba(0, 0, 0, 0.5) 0%,
-         rgba(0, 0, 0, 0.5) 100%),
-      url('../pages/images/LOGO.jpg');
+   background: url('../pages/images/MainLogo.jpeg');
    background-position: center;
    background-repeat: no-repeat;
 }
@@ -64,7 +61,10 @@
 }
 
 .navbtns {
+   flex-direction: column;
+   align-items: flex-start;
    display: flex;
+   margin: 10rem;
    gap: 8rem;
 }
 
